# arcade-curtains

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
arcade_curtains/: __init__.py  animation.py  event.py  helpers.py  scene.py
examples/: anchor.py  animation_chain.py  animation_maker.py  animation_move.py  animation_sequence.py  click.py  down.py  drag.py  example_helpers.py  hover.py  observable.py  out.py  pokimans.py  theatre.py  up.py
tests/: conftest.py  test_animation.py  test_events.py  test_helpers.py  test_scene.py
