[metadata]
name = arcade-curtains
author = See AUTHORS
author-email = "TODO@gmail.com"
summary = A scene and event manager for python arcade
description-file = README.rst
home-page = https://github.com/maarten-dp/arcade-curtains
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    
      License :: OSI Approved :: MIT License
    
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = arcade_curtains

# add datafile to be included in your distribution packages here, ex:
#data-files =
#    data = data/*
#    frontend = frontend/dist/*

## CLI settings
#[entry_points]
#console_scripts =
#    arcade_curtains = arcade_curtains.cli:__main__


[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
exclude = */migrations/*,*/south_migrations/*
max-line-length = 100
ignore =
  # W503: line break before binary operator
  W503,

  # W504: line break after binary operator
  W504,

[isort]
line_length = 100

[yapf]
indent_dictionary_value = true
allow_split_before_dict_value = false

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    .eggs
    .cache
    dist
    build
    south_migrations
    migrations
    chunk_scripts
python_files =
    test_*.py
    *_test.py
    tests.py
